<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent" >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="0dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/off"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/text_point_label"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/PT" />
	
	        <TextView
	            android:id="@+id/text_point_value"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/FG" />
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/two" />
	
	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/three" />
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/text_ft_label"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/FT" />
	
	        <TextView
	            android:id="@+id/text_ft_value"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>	    
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textView8"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ast" />
	
	        <TextView
	            android:id="@+id/TextView9"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/oreb" />
	
	        <TextView
	            android:id="@+id/TextView02"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/TextView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="0dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/def"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/TextView12"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/stl" />
	
	        <TextView
	            android:id="@+id/TextView13"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/TextView03"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/blk" />
	
	        <TextView
	            android:id="@+id/TextView04"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/TextView16"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/dreb" />
	
	        <TextView
	            android:id="@+id/TextView17"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/TextView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="0dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/ext"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:background="@drawable/divide_line"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/TextView18"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/to" />
	
	        <TextView
	            android:id="@+id/TextView19"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="TextView" />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
<ListView
  android:id="@+id/drawer_listview"
  android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@color/navi_divide"
    android:dividerHeight="2dp"
    android:background="@color/navi_background" />
</android.support.v4.widget.DrawerLayout>
