<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout_input"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    <TextView
	        android:id="@+id/TextView_Off_Title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="-10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/off"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
		    <Button
		        android:id="@+id/btn_2pt_s"
		        android:layout_width="0dp"
		        android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />	
	        <TextView
	            android:id="@+id/TextView_2pt_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:gravity="center"
	            android:text="@string/s_two" />
	        <Button
	            android:id="@+id/btn_2pt_f"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
		        android:background="@drawable/button_negative_input"
		        android:textColor="#E6E8E7"
	            android:text="@string/ng" />
	    </LinearLayout>	    
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
		    <Button
		        android:id="@+id/btn_3pt_s"
		        android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />	
	        <TextView
	            android:id="@+id/TextView_3pt_Label"
		        android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:gravity="center"
	            android:text="@string/s_three" />
	        <Button
		        android:id="@+id/btn_3pt_f"
		        android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_negative_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ng" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="20dp"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/ft_s_btn"
		        android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
	            android:text="@string/ok" />

	        <TextView
	            android:id="@+id/TextView_ft_Label"
		        android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:gravity="center"
	            android:text="@string/s_FT" />

	        <Button
	            android:id="@+id/ft_f_btn"
		        android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_negative_input"
		        android:textColor="#E6E8E7"
	            android:text="@string/ng" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="20dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/TextView_ast_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_ast" />

	        <Button
	            android:id="@+id/ast_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
	            android:text="@string/ok" />
	        <TextView
	            android:id="@+id/ast_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/TextView_oreb_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_oreb" />

	        <Button
	            android:id="@+id/oreb_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
	            android:text="@string/ok" />
	        <TextView
	            android:id="@+id/oreb_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/TextView_Def_Title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="0dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/def"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/TextView_stl_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_stl" />
	        <Button
		        android:id="@+id/stl_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />
	        <TextView
	            android:id="@+id/stl_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	        	        	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/TextView_blk_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_blk" />
	        <Button
		        android:id="@+id/blk_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />
	        <TextView
	            android:id="@+id/blk_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginBottom="10dp"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/TextView_dreb_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_dreb" />
	        <Button
		        android:id="@+id/dreb_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />
	        <TextView
	            android:id="@+id/dreb_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/TextView_Ext_Title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="-5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/border"
	        android:text="@string/ext"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/title" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginBottom="10dp"
 	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/TextView_to_Label"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:gravity="center"
	            android:text="@string/s_to" />
	        <Button
		        android:id="@+id/to_btn"
	            android:layout_width="0dp"
	            android:layout_weight="2"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_positive_input"
		        android:textColor="#E6E8E7"
		        android:text="@string/ok" />
	        <TextView
	            android:id="@+id/to_tmp"
	            android:layout_width="0dp"
	            android:layout_weight="2"
	            android:layout_height="wrap_content"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dp"
	        android:background="@drawable/button_default"
	        android:textColor="#E6E8E7"
	        android:text="記録" />
	</LinearLayout>
</ScrollView>
   
<ListView
  android:id="@+id/drawer_listview_input"
  android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@color/navi_divide"
    android:dividerHeight="2dp"
    android:background="@color/navi_background" />
</android.support.v4.widget.DrawerLayout>
